# ambience

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SMOKE.md  go.mod  go.sum  screenshot-pages.json
.claude/: launch.json
.glimmung/: project.yaml
docs/: agentic-issue-flow.md  dev-endpoints.md  effect-candidates.md  effects-cookbook.md  glimmung-run-harness.md  glimmung-synthetic-verify-continuation.md  issue-agent-stage-split.md  rain-visual-model.md  single-runtime-wasm.md  terminal-integration-status.md
glimmung-harness/: go.mod  go.sum
k8s/: authority-client-service.yaml  authority-service.yaml  certificate.yaml  deployment.yaml  edge-deployment.yaml  httproute.yaml  kustomization.yaml  poddisruptionbudgets.yaml  pvc.yaml  reference-grant.yaml  service.yaml  xlistenerset.yaml
mcp/: pyproject.toml  run.py
mcp/ambience_preview/: __init__.py  agent_runtime.py  cli.py  mcp_server.py  ops.py
mcp/tests/: test_agent_runtime_selection.py  test_validation_image_identity.py  test_wait_agent_job.py
rngutil/: rng.go
scripts/: build-web-wasm.sh  check-chart-image-tag-sync.mjs  dev-deploy.ps1  dev-effect-loop.ps1  dev-loop.ps1  screenshot-pages.mjs  shot.mjs  smoke-web-wasm.mjs  test-client-clock.mjs  test-client-sync.mjs  test-glimmung-native-contract.sh
sim/: aurora.go  aurora_test.go  autumn_leaves.go  autumn_leaves_test.go  beach.go  beach_test.go  birds_on_a_wire.go  birds_on_a_wire_test.go  bog.go  bog_bubbles.go  bog_bubbles_test.go  bog_test.go  burning_trees.go  burning_trees_test.go  campfire.go  crystal_ball.go  (+69 more)
(+243 files in other folders)
