[project]
name = "ambience-preview"
version = "0.1.0"
description = "MCP server and CLI for exact ambience preview operations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
ambience-preview = "ambience_preview.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ambience_preview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
